tests/ui/feature-gates/feature-gate-closures-of-mass-destruction.rs
fn main() {
    compile_error!("evil and intimidating horse"); //~ERROR evil and intimidating horse
}
